--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul>
-                        <li>Phone: +011-2477-4814</li>
+                        <li>Phone: 011-2477-4814</li>
                         <li>Email: info@mashtato.com</li>
                         <li>Location: Politeknik Besut Terengganu</li>
                     </ul>
@@ -187,4 +187,5 @@
     <script src="script.js"></script>
     <script src="about.js"></script>
 </body>
+
 </html>
