Fix HTML encoding issues in cart.html

--- a/cart.html
+++ b/cart.html
@@ -83,7 +83,7 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul>
-                        <li>Phone: +011-2477-4814</li>
+                        <li>Phone: 011-2477-4814</li>
                         <li>Email: info@mashtato.com</li>
                         <li>Location: Politeknik Besut Terengganu</li>
                     </ul>
@@ -97,4 +97,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
