--- a/checkout.html
+++ b/checkout.html
@@ -205,7 +205,7 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul>
-                        <li>Phone: +011-2477-4814</li>
+                        <li>Phone: 011-2477-4814</li>
                         <li>Email: info@mashtato.com</li>
                         <li>Location: Politeknik Besut Terengganu</li>
                     </ul>
@@ -220,4 +220,5 @@
     <script src="script.js"></script>
     <script src="checkout.js"></script>
 </body>
+
 </html>
