--- a/confirmation.html
+++ b/confirmation.html
@@ -73,7 +73,7 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul>
-                        <li>Phone: +011-2477-4814</li>
+                        <li>Phone: 011-2477-4814</li>
                         <li>Email: info@mashtato.com</li>
                         <li>Location: Politeknik Besut Terengganu</li>
                     </ul>
@@ -152,4 +152,5 @@
         });
     </script>
 </body>
+
 </html>
