--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                             <div class="contact-icon">📞</div>
                             <div>
                                 <h4>Phone / WhatsApp</h4>
-                                <p>+011-2477-4814</p>
+                                <p>011-2477-4814</p>
                                 <a href="https://wa.me/601124774814" class="whatsapp-link">Message us on WhatsApp</a>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul>
-                        <li>Phone: +011-2477-4814</li>
+                        <li>Phone: 011-2477-4814</li>
                         <li>Email: info@mashtato.com</li>
                         <li>Location: Politeknik Besut Terengganu</li>
                     </ul>
@@ -186,4 +186,5 @@
     <script src="script.js"></script>
     <script src="contact.js"></script>
 </body>
+
 </html>
