--- a/order.html
+++ b/order.html
@@ -89,7 +89,7 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul>
-                        <li>Phone: +011-2477-4814</li>
+                        <li>Phone: 011-2477-4814</li>
                         <li>Email: info@mashtato.com</li>
                         <li>Location: Politeknik Besut Terengganu</li>
                     </ul>
@@ -103,4 +103,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
