--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="hero" id="home">
         <div class="container">
             <h1>LOADED POTATO BOWL</h1>
-            <p>Delicious loaded potato bowls with your choice of premium toppings. Fresh ingredients, amazing flavors!</p>
+            <p><b>Delicious loaded potato bowls with your choice of premium toppings. Fresh ingredients, amazing flavors!</b></p>
             <div class="price-tag">RM6.00 ONLY</div>
             <a href="order.html" class="cta-button">GRAB NOW!</a>
         </div>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="popular-card">
-                    <div class="popular-image" style="background-image: url('img1.jpg');"></div>
+                    <div class="popular-image" style="background-image: url('img3.jpg');"></div>
                     <div class="popular-content">
                         <h3>Meatball Bowl</h3>
                         <p>Savory, juicy meatballs with rich gravy and toppings</p>
@@ -287,5 +287,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
